Wed Apr  8 13:14:29 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Wrote sizeof(SV *) instead of sizeof(I32) when portable, which
	in effect mangled the object tags and prevented portability
	accross 32/64 bit architectures!

Wed Mar 25 14:57:02 MET 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Added code example for store_fd() and retrieve_fd() in the
	man page, to emphasize that file descriptors must be passed as
	globs, not as plain strings.

	Cannot use SV addresses as tag when using nstore() on LP64. This
	was the cause of problems when creating a storable image on an
	LP64 machine and retrieving it on an ILP32 system, which is
	exactly what nstore() is meant for...

	However, we continue to use SV addresses as tags for plain store(),
	because benchamarking shows that it saves up to 8% of the store
	time, and store() is meant to be fast at the expense of lack
	of portability.

	This means there will be approximately an 8% degradation of
	performance for nstore(), but it's now working as expected.
	That cost may vary on your machine of course, since it is
	solely caused by the memory allocation overhead used to create
	unique SV tags for each distinct stored SV.

Tue Jan 20 09:21:53 MET 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Don't use any '_' in version number.

Tue Jan 13 17:51:50 MET 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Updated version number.

	added binmode() calls for systems where it matters.

	Be sure to pass globs, not plain file strings, to C routines,
	so that Storable can be used under the Perl debugger.

Wed Nov  5 10:53:22 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Fix memory leaks on seen hash table and returned SV refs.

	Storable did not work properly when tainting enabled.

	Fixed "Allocation too large" messages in freeze/thaw and added.